Activities + Footer - Mobile

--- a/index.html
+++ b/index.html
@@ -208,37 +208,38 @@
             <!-- -------------------- -->
             <!-- ------ To do list ------ -->
             <article id="activities" class="container">
-                <h2>Activités à Marseille</h2>
-                <section>
-                    <img src="#" alt="Vieux Port">
-                    <h3>Vieux Port</h3>
+                <h2 class="title">Activités à Marseille</h2>
+                <section class="flex flex-column">
+                    <img src="./image/Activities/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="Vieux Port">
+                    <h3 class="fontsize-2-5">Vieux Port</h3>
                 </section>
-                <section>
-                    <img src="#" alt="Vieux Port">
-                    <h3>Vieux Port</h3>
+                <section class="flex flex-column">
+                    <img src="./image/Activities/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="Fort de Pomègues">
+                    <h3 class="fontsize-2-5">Fort de Pomègues</h3>
                 </section>
-                <section>
-                    <img src="#" alt="Vieux Port">
-                    <h3>Vieux Port</h3>
+                <section class="flex flex-column">
+                    <img src="./image/Activities/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="Îles du Frioul">
+                    <h3 class="fontsize-2-5">Îles du Frioul</h3>
                 </section>
-                <section>
-                    <img src="#" alt="Vieux Port">
-                    <h3>Vieux Port</h3>
+                <section class="flex flex-column">
+                    <img src="./image/Activities/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="Parc National des Calanques">
+                    <h3 class="fontsize-2-5">Parc National des Calanques</h3>
                 </section>
-                <section>
-                    <img src="#" alt="Vieux Port">
-                    <h3>Vieux Port</h3>
+                <section class="flex flex-column">
+                    <img src="./image/Activities/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="Notre-Dame-de-la-Garde">
+                    <h3 class="fontsize-2-5">Notre-Dame-de-la-Garde</h3>
                 </section>
-                <section>
-                    <img src="#" alt="Vieux Port">
-                    <h3>Vieux Port</h3>
+                <section class="flex flex-column">
+                    <img src="./image/Activities/lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt="Parc Longchamp">
+                    <h3 class="fontsize-2-5">Parc Longchamp</h3>
                 </section>
             </article>
+
             <!-- -------------------- -->
         </main>
         <!-- ------ FOOTER ------ -->
-        <footer class="bg-grey">
-            <div class="container flex">
+        <footer class="bg-grey py-3 pl-2">
+            <div class="container flex flex-column fontsize-2">
                 <nav>
                     <h3>A propos</h3>
                     <ul>
