--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <a href="#" class="text-blue font-bold fontsize-2-5">S'inscrire</a>
             </div>
             <nav>
-                <ul id="main_nav" class="flex fontsize-2-5">
+                <ul id="main-nav" class="flex fontsize-2-5">
                     <li class="actived-nav flex centerall"><a href="#lodging">Hébergements</a></li>
                     <li class="flex centerall"><a href="#activities" class="text-grey">Activités</a></li>
                 </ul>
@@ -243,8 +243,8 @@
                 <nav>
                     <h3>A propos</h3>
                     <ul>
-                        <li><a href="#">Fonctionne du site</a></li>
-                        <li><a href="#">Conditions générales de ventes</a></li>
+                        <li><a href="#">Fonctionnement du site</a></li>
+                        <li><a href="#">Conditions générales de vente</a></li>
                         <li><a href="#">Données et confidentialité</a></li>
                     </ul>
                 </nav>
