Search bar + filter - Desktop

--- a/index.html
+++ b/index.html
@@ -27,18 +27,19 @@
         <main id="lodging" class="flex-column content-center">
             <div class="container" >
                 <h1 class="fontsize-3-5">Trouvez votre hébergement pour des vacances de rêve</h1>
-                <h2 class="text-grey font-normal">En plein centre ville ou en pleine nature</h2>
+                <h2 class="text-grey font-normal fontsize-1-5">En plein centre ville ou en pleine nature</h2>
                 <form action="#" method="get" class="flex content-center">
                     <div class="bg-grey flex-column centerall fontsize-3">
                         <i class="fas fa-map-marker-alt"></i>
                     </div>
                     <input type="text" id="location" class="font-bold fontsize-3 flex-grow" name="location" value="Marseille, France">
                     <button type="submit" class="bg-blue">
+                        <span class="text-white fontsize-3 font-bold">Rechercher</span>
                         <i class="fas fa-search fontsize-2-5 text-white"></i>
                     </button>
                 </form>
-                <p class="fontsize-3 font-bold">Filtres</p>
-                <ul class="flex flex-wrap flex-space-between">
+                <ul class="flex flex-wrap flex-space-between filter-list">
+                    <p class="fontsize-3 font-bold w100">Filtres</p>
                     <li class="flex centerall filter">
                         <div class="bg-blue-light flex-column centerall disc">
                             <i class="fas fa-money-bill-wave text-blue fontsize-3"></i>
